fix: don't show scroll in dayname (overflow: hidden)

--- a/src/css/week/dayname.styl
+++ b/src/css/week/dayname.styl
@@ -1,7 +1,8 @@
 .{css-prefix}dayname
-    position: absolute;
+    position: absolute
     margin-left: -1px
     height: 100%
+    overflow: hidden
 
     &.{css-prefix}today
         font-weight: bold
